--- a/css/main.css
+++ b/css/main.css
@@ -80,15 +80,15 @@ margin-right:60px
 }
 /**********HERO**********/
 .hero {
-    background-image: url("../image/hero.jpg");
-    height: 400px;
+    background-image:url("../image/hero.jpg");
+    height:400px;
     background-size:cover;
     background-position: center center;
     text-transform: uppercase;
 }
 .hero h1 {position: relative; left: -30px;}
 .hero h2 {text-decoration-color: #faa541;}
-.hero h1, h2 {
+.hero h1, .hero h2 {
     font-size: 63px; 
     font-weight: 700; 
     line-height: 0.9
@@ -113,13 +113,13 @@ margin-right:60px
     line-height: 1;
     text-align: center;
 }
-.banner-text >div:last-child{ font-size:16px; font-weight:400; margin-top: 5px; }
+.banner-text > div:last-child{ font-size:16px; font-weight:400; margin-top: 5px; }
 /********CATEGORIES*********/
 .category {flex: 0 0 25%; padding: 0 15px;}
 .category img {width: 100%}
 .category-text {
-    text-decoration-color: #364147;
-    padding: 30px 0;
+    color:#364147;
+    padding:30px 0;
     text-transform:uppercase;
     text-align:center;
 }
