--- a/css/main.css
+++ b/css/main.css
@@ -80,11 +80,11 @@ margin-right:60px
 }
 /**********HERO**********/
 .hero {
-    background-image:url("../image/hero.jpg");
+    background-image:url("../img/hero.jpg");
     height:400px;
     background-size:cover;
-    background-position: center center;
-    text-transform: uppercase;
+    background-position:center center;
+    text-transform:uppercase;
 }
 .hero h1 {position: relative; left: -30px;}
 .hero h2 {text-decoration-color: #faa541;}
