--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ margin-right:60px
 }
 /**********HERO**********/
 .hero {
-    background-image:url("../img/hero.jpg");
+    background-image:url('../img/hero.jpg');
     height:400px;
     background-size:cover;
     background-position:center center;
