--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ margin-right:60px
               margin: 50px 0;
               position: relative;
 }
-.full-banner::before{ content:"";
+.full-banner:before{ content:"";
                         position: absolute;
                         border: 1px solid #ffffff;
                         top: 30px;
@@ -145,7 +145,7 @@ margin-right:60px
 }
 .full-banner-image {
     flex: 0 0 58.333333%;
-    background-image: url('..img/vista.jpg');
+    background-image: url('../img/vista.jpg');
     background-size: cover;
     background-position: top center;
     min-height: 400px;
@@ -155,7 +155,7 @@ margin-right:60px
     background-color:#364147;
     text-transform: uppercase;
     padding: 30px;
-    text-decoration-color: #ffffff;
+    color:#ffffff;
 }
 .full-banner-sidebar h4 {
         font-size: 40px;
@@ -164,7 +164,7 @@ margin-right:60px
         font-style: italic;
         line-height: 1;
 }
-full-banner-sidbar h4::after{
+.full-banner-sidebar h4:after {
     content:"";
     width:100px;
     height:1px;
