--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,82 @@ margin-right:60px
     letter-spacing: 1px;
     z-index: 1;
 } 
+/*********FOOTER********/
+.footer {
+    display:flex;
+    position:relative;
+    z-index: 0;
+    min-height:330px;
+    background-color: #000000;
+    flex-wrap: wrap;
+}
+.footer:after{
+    content:"";
+    background-color:#a0a0a0;
+    width:75%;
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    z-index:-1;
+}
+.lists {flex: 0 0 75%; padding: 40px 15px;}
+.link-header{
+    text-transform: uppercase;
+    font-size:16px;
+    font-weight:700;
+    margin-bottom:15px;
+}
+.footer a{ text-decoration-color: #ffffff;
+           text-transform:uppercase;
+           font-size:12px;
+           padding: 0 0 4px;
+}
+.footer a:hover {text-decoration:underline;}
+.social ul li {
+    display: inline-block;
+}
+.social ul li a {
+        display: block;
+        width: 23px;
+        height: 23px;
+        background-size: 23px 23px;
+        background-position: center;
+}
+.twitter {background-image: url('../img/twitter.svg');}
+.facebook {background-image: url('../img/facebook.svg');}
+.instagram {background-image: url('../img/facebook.svg');}
+.pinterest {background-image: url('../img/pinterest.svg');} 
 
+.newsletter.link-header {
+    font-size: 12px;
+    font-weight:400;
+    margin-bottom:5px;
+}
+.newsletter.link-subheader {
+    font-style:italic;
+    font-weight:400;
+    font-size:12px;
+    margin-bottom:15px;
+}
+.newletter input {
+    border: 1px solid #364147;
+    width:200px;
+    margin-bottom: 10px;
+}
+.newsletter button {
+    width: 150px;
+    min-width: auto;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+.ps {flex: 0 0 25%;
+     padding:40px 0;
+     color:#e5e5e5;
+     font-size:16px;
+}
+.ps img{max-width:230px;}
 
 
 
