--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ footer {
     position:relative;
     z-index:0;
     min-height:330px;
-    background-color:black;
+    background-color:#000000;
     flex-wrap:wrap;
 }
 footer:after {
@@ -157,7 +157,7 @@ footer:after {
     margin-bottom:15px;
 }
 footer a{
-    text-decoration-color:white;
+    color: #ffffff;
     text-transform:uppercase;
     font-size:12px;
     padding:0 0 4px;
@@ -187,14 +187,14 @@ footer a:hover {text-decoration:underline;}
     font-weight:400;
     margin-bottom:15px;
 }
-.newsletter input{
+.newsletter input {
     border:1px solid #364147;
     width:200px;
     margin-bottom:10px;
 }
 .newsletter button {
     width: 150px;
-    min-width: initial;
+    min-width: auto;
     text-transform:uppercase;
     letter-spacing:1px;
 }
